etablissement migration et debut view

--- a/ProjetMVC/Views/Users/Index.cshtml
+++ b/ProjetMVC/Views/Users/Index.cshtml
@@ -29,7 +29,7 @@
                 @Html.DisplayNameFor(model => model.LastName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Birthday.Date)
+                @Html.DisplayNameFor(model => model.Birthday)
             </th>
             <th></th>
         </tr>
