--- a/ProjetMVC/Views/Users/Create.cshtml
+++ b/ProjetMVC/Views/Users/Create.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model ProjetMVC.Models.User
+
 @{
     Layout = null;
 }
@@ -8,10 +9,31 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Create</title>
+    <title>Create User</title>
 </head>
 <body>
-    <div> 
-    </div>
+    <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+
+    @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+        <div class="form-horizontal">
+            <h4>User</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "test-danger" })
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
+        </div>
+            }
 </body>
 </html>
