--- a/ProjetMVC/Views/Home/Index.cshtml
+++ b/ProjetMVC/Views/Home/Index.cshtml
@@ -11,8 +11,12 @@
     <title>Index</title>
 </head>
 <body>
-    <div> 
-        Salut tout le monde !!!
+    <div>
+        <h1>Projet MVC IS3 </h1>
+        <br /> @Html.ActionLink("Vers les Users", "Index", "Users")
+        <br /> @Html.ActionLink("Vers les Ammoes", "Index", "Ammoes")
+        <br /> @Html.ActionLink("Vers les Weapon", "Index", "Weapon")
+        <br /> @Html.ActionLink("Vers les Certificats", "Index", "Certificats")
     </div>
 </body>
 </html>
