--- a/ProjetMVC/Views/Weapon/Index.cshtml
+++ b/ProjetMVC/Views/Weapon/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<ProjetMVC.Models.Weapon>
 
 @{
-    ViewBag.Title = "Index";
-    Layout = null;
+    ViewBag.Title = "Weapon";
+    Layout = "~/Views/Shared/_EssaiLayout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -10,10 +10,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Weapon</title>
 </head>
 <body>
-    <h2>Index</h2><br />
+    <h2>Weapon</h2><br />
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
