--- a/ProjetMVC/Views/Users/Index.cshtml
+++ b/ProjetMVC/Views/Users/Index.cshtml
@@ -52,7 +52,8 @@
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.UserID }) |
                     @Html.ActionLink("Details", "Details", new { id = item.UserID }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.UserID })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.UserID }) |
+                    @Html.ActionLink("voir arme", "Arme", new { id = item.UserID })
                 </td>
             </tr>
         }
