implémentation des dictionnaires

--- a/ProjetMVC/Views/Users/Details.cshtml
+++ b/ProjetMVC/Views/Users/Details.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div>
-        <h4>Product</h4>
+        <h4>User</h4>
         <hr />
         <dl class="dl-horizontal">
             <dt>
