le moteur de recherche oublié

--- a/ProjetMVC/Views/Ammoes/Index.cshtml
+++ b/ProjetMVC/Views/Ammoes/Index.cshtml
@@ -51,5 +51,12 @@
             </tr>
         }
     </table>
+    <br/>
+    @using (Html.BeginForm("Recherche", "Ammoes"))
+            {
+            @Html.TextBox("MotClef")
+            <input type="submit" value="MotClef" />
+            }
+    
 </body>
 </html>
